# src/models/EventiModel.js
@@ -3,13 +3,19 @@ const collection = "Events";
 
 const EventoSchema = new mongoose.Schema({
   name: { type: String, required: true },
-  hostAssociation: { type: [String], required: false },
+  hostAssociation: { type: String, required: false },
   startDateTime: { type: Date, required: true },
   endDateTime: { type: Date, required: true },
   place: { type: String, required: true },
   gmapsLink: { type: String, required: false },
   description: { type: String, required: false },
   subscribedVolonteers: { type: [String], required: false },
+  maxParticipants: { type: Number, required: true },
+  status: {
+    type: String,
+    enum: ["upcoming", "ongoing", "completed", "cancelled"],
+    required: true,
+  },
 });
 
 export default mongoose.model(collection, EventoSchema);
