# src/models/VolontarioModel.js
@@ -9,7 +9,6 @@ const VolontarioSchema = new mongoose.Schema({
   age: { type: Number, min: 0, max: 200, required: true },
   email: { type: String, required: true, unique: true },
   phone: { type: String, required: false },
-  fiscalcode: { type: String, required: true },
   password: { type: String, required: true },
   followedAssociations: { type: [String], required: false },
   subscribedEvents: { type: [String], required: false },
